--- a/index.html
+++ b/index.html
@@ -10,38 +10,67 @@
 <!--
 * {
   margin: 0;
-  border: 0;
+	border: 0;
 	padding: 0;
 }
 body {
-	background: #f0f0f0;
+	background-image:url('background.jpg');
+	/*background: #f0f0f0;*/
 	font: 28px/40px Arial, San-Serif;
 	color: #404040;
 }
 a { color: #264c99; text-decoration: none; }
 a:hover { text-decoration: underline; }
 
+#navigation 
+{
+	padding:10px 0px;
+	width:175px;
+}
+
+
+#navigation a 
+{
+	background:#FFFFCC;
+	display:block;
+	height:150px;
+	text-indent: 0px;
+	font-size: 20px;
+}
+
+
+
+#navigation a{
+text-decoration: none; 
+font-family: Verdana, 
+sans-serif; 
+color:#FF0000;
+text-align:center;
+font-size:;
+}
+
+
 h1,h2,h3,h4,p { margin-bottom: 10px; }
 h1 {
-	font-size: 24px;
-	line-height: 30px;
-	color: #ffffff;
-	text-transform: lowercase;
+	font-size: 50px;
+	font-family:verdana;
+	color:#000000;
+	
 }
 h2, h3 {
 	font-weight: normal;
-	font-size: 22px;
+	/*font-size: 22px;*/
 	line-height: 40px;
-	color: #808080;
+	/*color: #808080;*/
 }
 h3 { font-size: 18px; color: #404040; }
 h5 { font-weight: bold; font-size: 14px; color: #000; }
 
 #header {
+	position:absolute;
 	height: 85px;
 	padding-top: 20px; padding-bottom: 20px;
 	text-align: center;
-	background: #ffffff;
 }
 #header h1 {
 	margin: 0 auto;
@@ -53,6 +82,13 @@ h5 { font-weight: bold; font-size: 14px; color: #000; }
 	margin: 0 auto;
 	min-width: 370px;
 	max-width: 570px;
+}
+
+#links {
+	position: absolute;
+	top-margin:75%;
+	margin: 50%;
+
 }
 
 .blueberry { max-width: 580px; }
@@ -72,9 +108,18 @@ $(window).load(function() {
 </head>
 <body>
 
+
+<!--
 <div id="header">
-  <h1><img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/971107_491295327623403_140900917_n.jpg" alt="Logo" /></h1>
+  <h1> <img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-prn2/971107_491295327623403_140900917_n.jpg" alt="Logo" /></h1>
+</div> -->
+
+<div id="header">
+	<h1>
+		FoodSpot
+	</h1>
 </div>
+
 
 <div id="doc">
   <div id="content">
@@ -82,11 +127,13 @@ $(window).load(function() {
 
     <div class="blueberry">
       <ul class="slides">
+      	
         <li><img src="http://images.cdn.fotopedia.com/flickr-5040304297-hd.jpg" /></li>
         <li><img src="http://upload.wikimedia.org/wikipedia/commons/5/54/Healthy_food.jpg" /></li>
 		<li><img src="http://farm4.staticflickr.com/3269/2508061511_343d335273_o.jpg" /></li>
         <li><img src="http://images.cdn.fotopedia.com/flickr-2186673560-hd.jpg" /></li>
         <li><img src="http://upload.wikimedia.org/wikipedia/commons/3/3a/Capsicum_annuum_fruits_IMGP0044.jpg" /></li>
+
       </ul>
     </div>
 
@@ -94,8 +141,23 @@ $(window).load(function() {
   </div>
 </div>
 
+
+
+
+
+
+<ul id="navigation">
+<li><a href="index.html" class="link1">Health Feed</a></li>
+<li><a href="rewards.html" class="link2">Rewards</a></li>
+<li><a href="Friendsspot.html" class="link3">My Spot</a></li>
+<li><a href="friends.html" class="link4">Friends Spot</a></li>
+</ul>
+
 <title>More information about healthy food</title>
+
 <center>
+<div class="links">
+
 <a href="http://www.vitacost.com/"
   title= "Click here to check your site's 
     links!">Vitacost</a> 
@@ -110,6 +172,8 @@ $(window).load(function() {
   title= "Click here to check your site's 
     links!">Natural News</a> 
 	<hr>
+</div>
 </center>
+
 </body>
 </html>
