--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
 <link rel="stylesheet" href="blueberry.css" />
 <style type="text/css">
-<!--
+table#links{
+	margin:0 auto;
+	margin-left: 250px;
+}
+table#links td{
+	padding:30px;
+}
+
 * {
   margin: 0;
 	border: 0;
@@ -81,7 +88,7 @@ h5 { font-weight: bold; font-size: 14px; color: #000; }
 #content {
 	margin: 0 auto;
 	min-width: 370px;
-	max-width: 570px;
+	max-width: 470px;
 }
 
 #links {
@@ -91,7 +98,7 @@ h5 { font-weight: bold; font-size: 14px; color: #000; }
 
 }
 
-.blueberry { max-width: 580px; }
+.blueberry { max-width: 400px; }
 
 -->
 </style>
@@ -153,10 +160,103 @@ $(window).load(function() {
 <li><a href="friends.html" class="link4">Friends Spot</a></li>
 </ul>
 
+
 <title>More information about healthy food</title>
 
 <center>
-<div class="links">
+	 <center>
+<title>More information about healthy food</title>
+
+
+	<hr>
+
+
+	<hr>
+
+
+	<hr>
+	</center>
+
+	<table id="links">
+		<tr>
+
+
+
+		<td>
+
+		<b>Heathly Food</b>
+
+			</td>
+			<td>
+
+			<b>Video</b>
+
+			</td>
+			<td>
+			<b>More Information</b>
+			</td>
+		</tr>
+
+
+
+
+		<tr>
+
+
+
+		<td><a href="http://www.vitacost.com/"
+  title= "Click here to check your site's 
+    links!">vitacost</a> 
+			</td>
+			<td><a href="http://www.youtube.com/watch?v=KG_ybdk1VaE"
+  title= "Click here to check your site's 
+    links!">butter vs margarine</a> 
+			</td>
+			<td><a href="http://www.naturalnews.com/index.html"
+  title= "Click here to check your site's 
+    links!">natural news</a> 
+			</td>
+		</tr>
+
+
+
+
+		<tr>
+			<td><a href="http://www.simpletruth.com/products/?cmp=GooglePPC&gclid=CN_ggsPU8LcCFQ9eQgodFX8AnQ"
+  title= "Click here to check your site's 
+    links!">simple truth</a> 
+			</td>
+			<td><a href="http://www.youtube.com/watch?v=BwqAelWSgHk"
+  title= "Click here to check your site's 
+    links!">beating overeating</a> 
+			</td>
+			<td><a href="http://nutritionfacts.org/"
+  title= "Click here to check your site's 
+    links!">nutrition facts</a> 
+			</td>
+		</tr>
+
+
+
+
+
+		<tr>
+			<td><a href="http://www.freshandeasy.com/"
+  title= "Click here to check your site's 
+    links!">fresh and easy</a> 
+			</td>
+			<td><a href="http://www.youtube.com/watch?v=HA00ZctGz50"
+  title= "Click here to check your site's 
+    links!">Scientific Weight Loss Tips</a> 
+			</td>
+			<td><a href="http://nutritiondata.self.com/"
+  title= "Click here to check your site's 
+    links!">nutrition data</a> 
+			</td>
+		</tr>
+	</table>
+
+<!--<div class="links">
 
 <a href="http://www.vitacost.com/"
   title= "Click here to check your site's 
@@ -173,7 +273,8 @@ $(window).load(function() {
     links!">Natural News</a> 
 	<hr>
 </div>
-</center>
+-->
 
+</center>
 </body>
 </html>
